examples/tech-overview/deploy/clusters/overview/components/httproutes/httproutes.gen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    argocd.argoproj.io/instance: httproutes
    holos.run/component.name: httproutes
  name: podinfo.example.com
  namespace: istio-ingress
spec:
  hostnames:
  - podinfo.example.com
  parentRefs:
  - name: default
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: podinfo
      namespace: experiment
      port: 9898
    matches:
    - path:
        type: PathPrefix
        value: /
